<resources>
    <string name="app_name">Агроном</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cultures_string">Культуры</string>
    <string name="fields_string">Поля</string>
    <string name="harvest_string">Урожай</string>
    <string name="sowings_string">Посевы</string>
    <string name="enter_your_email">Введите email</string>
    <string name="enter_your_pass">Введите пароль</string>
    <string name="re_enter_your_pass">Введите повторно пароль</string>
    <string name="main_string">Главная</string>
    <string-array name="sort">
        <item>Без</item>
        <item>По убыванию</item>
        <item>По возрастанию</item>
    </string-array>
    <string-array name="status">
        <item>Свободно</item>
        <item>Засеяно</item>
    </string-array>
    <string-array name="fieldStatus">
        <item>Все поля</item>
        <item>Свободно</item>
        <item>Засеяно</item>
    </string-array>
    <string-array name="sowingStatus">
        <item>Все записи</item>
        <item>Засеян</item>
        <item>Завершён</item>
    </string-array>
    <string-array name="count">
        <item>Без фильтра</item>
        <item>По возрастанию</item>
        <item>По убыванию</item>
    </string-array>
</resources>