<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/culturesFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/cultures"
        android:title="@string/cultures_string" />
    <item
        android:id="@+id/fieldsFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/fields"
        android:title="@string/fields_string" />
    <item
        android:id="@+id/mainFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/main"
        android:title="@string/main_string" />
    <item
        android:id="@+id/sowingsFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/sowings"
        android:title="@string/sowings_string" />
    <item
        android:id="@+id/harvestFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/harvest"
        android:title="@string/harvest_string" />
</menu>